--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "theme_color": "#f69435",
-    "background_color": "#f69435",
-    "display": "standalone",
+    "theme_color": "#252525",
+    "background_color": "#252525",
+    "display": "fullscreen",
     "scope": "/",
     "start_url": "/?source=pwa",
     "name": "ListenBro",
