--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 #NEXT_PUBLIC_BASE_URL=http://192.168.0.13:5000/
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/
+NEXT_PUBLIC_BASE_URL=https://listen-app-gamma.vercel.app/
