--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 #NEXT_PUBLIC_BASE_URL=http://192.168.0.13:5000/
 #NEXT_PUBLIC_BASE_URL=https://listen-app-gamma.vercel.app/
-NEXT_PUBLIC_BASE_URL=https://listen-app-server-mongo.vercel.app/
+#NEXT_PUBLIC_BASE_URL=https://listen-app-server-mongo.vercel.app/
+NEXT_PUBLIC_BASE_URL=http://85.193.90.188:5000/
