--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
     "@vercel/blob": "^0.21.0",
     "axios": "^1.6.3",
     "framer-motion": "^11.0.3",
