--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
-    "@vercel/blob": "^0.21.0",
     "axios": "^1.6.3",
     "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "next-pwa": "^5.6.0",
-    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
-    "uuid": "^9.0.1",
-    "zukeeper": "^1.0.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.20.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
