--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.3",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "next-pwa": "^5.6.0",
