--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
