--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,12 @@
 #NEXT_PUBLIC_BASE_URL=https://listen-app-gamma.vercel.app/
 #NEXT_PUBLIC_BASE_URL=https://listen-app-server-mongo.vercel.app/
 NEXT_PUBLIC_BASE_URL=https://listenappserver.site/
+
+NEXTAUTH_SECRET=reewrhre
+NEXTAUTH_URL=https://listenappserver.site/
+
+GOOGLE_CLIENT_ID=964409298224-sm8pt719ene0ivgebp0fdhtubc12q1oa.apps.googleusercontent.com
+GGOGLE_CLIENT_SECRET=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
+
+GITHUB_CLIENT_ID=326f42629f219234bb8e
+GITHUB_CLIENT_SECRET=779ec3ba9130cbaa5ad4452d6e6fef6b39fec5b1
