--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,7 @@
 NEXT_PUBLIC_BASE_URL=https://listenappserver.site/
 
 NEXTAUTH_SECRET=823798d8feb8488fe209dce4e1f555bb
+NEXTAUTH_URL=https://listen-app-gamma.vercel.app/
 
 GOOGLE_CLIENT_ID=964409298224-sm8pt719ene0ivgebp0fdhtubc12q1oa.apps.googleusercontent.com
 GGOGLE_CLIENT_SECRET=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
