--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ yarn-error.log*
 next-env.d.ts
 
 .vercel
+/public/sw.js
+/public/sw.js.map
+/public/workbox-e43f5367.js
+/public/workbox-e43f5367.js.map
