--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.3",
     "clsx": "^2.1.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
